Fixed header styles

--- a/blog.css
+++ b/blog.css
@@ -1,121 +1,149 @@
-.header{
-  margin-top: 40px;
-  margin-left: 20px;
-  margin-right: 20px;
-  font-size: 0;
-  height: 45px;
+.fixed-header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
-
-.navbar{
-  width: 70%;
-  text-align: center;
-  font-weight: 500;
-}
-.actions{
-  width: 15%;
-  text-align: right;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.header>*{
-  vertical-align: middle;
-  display: inline-block;
-  font-size: 16px;
-  height: 100%;
-  line-height: 45px;
-}
-
-title {
-  color:#8b8b8bcc;
-}
-
-h2{
-  color: black;
-}
-
-h1{color: #025157;
-  
-}
-p{
-  color: #46484c;
-  font-size: 1m;
-}
-html{
-  font-size: 18px; 
-}      
-h1{ 
-  color: green;
-  
-}
-h6{
-  columns: rgb(43, 148, 190);
-}
-
-ul{
-  width: 50%;
-  margin: 0;
-}
-li{
-  font-size: 1.5em;
-  display:inline;
-  margin: 2px, 5px;
-  
-}
-.publish h3
-{
-  font-family: 'Alegreya', serif;
-  font-size: 40px;
-  line-height: 48px;
-  color: #025157;
-}
-.publish > p
-{
-  font-size: 16px;
-  color: #343434;
-  line-height: 1.5;
-  margin-bottom: 20px;
-  
-}
-.publish > form
-{
+.header {
   display: flex;
-}
-
-.publish > form p
-{
-  color: #025157;
-  margin-right: 18px;
-  flex: 1;
-}
-.promo
-{
-  display: flex;
-  width: 70%;
-  margin: 100px auto;
+  justify-content: space-between;
   align-items: center;
 }
-.explanatory-video
-{
+
+.navbar ul {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1;
+  justify-content: center;
+  font-family: 'Open Sans', sans-serif; 
+  font-weight: 400;
+  font-size: 16px;
 }
-.explanatory-video image
-{
-  width: 120px;
-  margin-top: 10px;
+
+.navbar ul li {
+  list-style-type: none;
+  padding: 0 0.5em;
 }
-.fixed-header{
+
+.navbar ul li a {
+  padding: 0.5em;
+  text-decoration: none;
+  color: #025157;
+}
+
+
+.fixed-header {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   background-color: #fffbf7;
 }
-main{
-  margin-top: 285 px;
+
+main {
+  margin-top: 285px;
   text-align: center;
+}
+
+@media (max-width: 575px) {
+  .navbar,
+  .actions {
+    display: none;
+  }
+
+  .fixed-header {
+    display: none;
+  }
+
+  main {
+    margin-top: 0;
+  }
+}
+
+.logo {
+  padding: 15px;
+}
+
+.actions {
+  padding: 15px;
+}
+
+.actions a {
+  color: #66B64B;
+  font-size: 0.8em;
+  padding: 10px;
+}
+
+.actions button {
+  background-color: #66B64B;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+}
+
+
+/* Main section */
+
+title {
+  color:#8b8b8bcc;
+}
+
+h2 {
+  color: black;
+}
+
+h1 {
+  color: #025157;
+}
+
+p {
+  color: #46484c;
+  font-size: 1m;
+}
+
+html {
+  font-size: 18px; 
+}      
+
+h6 {
+  columns: rgb(43, 148, 190);
+}
+
+.publish h3 {
+  font-family: 'Alegreya', serif;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
+}
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.publish > form {
+  display: flex;
+}
+
+.publish > form p {
+  color: #025157;
+  margin-right: 18px;
+  flex: 1;
+}
+.promo {
+  display: flex;
+  width: 70%;
+  margin: 100px auto;
+  align-items: center;
+}
+.explanatory-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+}
+.explanatory-video image {
+  width: 120px;
+  margin-top: 10px;
 }
