--- a/blog.css
+++ b/blog.css
@@ -1,62 +1,60 @@
-.fixed-header {
+/*.fixed-header {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
-}
+}*/
 
-.header {
+/*.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
+}*/
+/*
 .navbar ul {
   display: flex;
   justify-content: center;
-  font-family: 'Open Sans', sans-serif; 
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 16px;
-}
-
+}*/
+/*
 .navbar ul li {
   list-style-type: none;
   padding: 0 0.5em;
-}
-
+}*/
+/*
 .navbar ul li a {
   padding: 0.5em;
   text-decoration: none;
   color: #025157;
-}
-
-
+}*/
+/*
 .fixed-header {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   background-color: #fffbf7;
-}
+}*/
 
 main {
   margin-top: 72px;
   text-align: center;
 }
-
+/*
 @media (max-width: 575px) {
-  .navbar,
   .actions {
     display: none;
-  }
-
+  }*/
+  /*
   .fixed-header {
     display: none;
   }
 
   main {
     margin-top: 0;
-  }
+  }*/
 }
 
 .logo {
@@ -68,24 +66,23 @@ main {
 }
 
 .actions a {
-  color: #66B64B;
+  color: #66b64b;
   font-size: 0.8em;
   padding: 10px;
 }
 
 .actions button {
-  background-color: #66B64B;
+  background-color: #66b64b;
   color: white;
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
 }
 
-
 /* Main section */
 
 title {
-  color:#8b8b8bcc;
+  color: #8b8b8bcc;
 }
 
 h2 {
@@ -102,15 +99,15 @@ p {
 }
 
 html {
-  font-size: 18px; 
-}      
+  font-size: 18px;
+}
 
 h6 {
   columns: rgb(43, 148, 190);
 }
 
 .publish h3 {
-  font-family: 'Alegreya', serif;
+  font-family: "Alegreya", serif;
   font-size: 40px;
   line-height: 48px;
   color: #025157;
