--- a/blog.scss
+++ b/blog.scss
@@ -1,62 +1,7 @@
-.fixed-header {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.navbar ul {
-  display: flex;
-  justify-content: center;
-  font-family: 'Open Sans', sans-serif; 
-  font-weight: 400;
-  font-size: 16px;
-}
-
-.navbar ul li {
-  list-style-type: none;
-  padding: 0 0.5em;
-}
-
-.navbar ul li a {
-  padding: 0.5em;
-  text-decoration: none;
-  color: #025157;
-}
-
-
-.fixed-header {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  background-color: #fffbf7;
-}
 
 main {
   margin-top: 72px;
   text-align: center;
-}
-
-@media (max-width: 575px) {
-  .navbar,
-  .actions {
-    display: none;
-  }
-
-  .fixed-header {
-    display: none;
-  }
-
-  main {
-    margin-top: 0;
-  }
 }
 
 .logo {
@@ -71,6 +16,10 @@ main {
   color: #66B64B;
   font-size: 0.8em;
   padding: 10px;
+
+  :hover {
+    color: red;
+  }
 }
 
 .actions button {
@@ -124,13 +73,14 @@ h6 {
 
 .publish > form {
   display: flex;
+
+  p {
+    color: #025157;
+    margin-right: 18px;
+    flex: 1;
+  }
 }
 
-.publish > form p {
-  color: #025157;
-  margin-right: 18px;
-  flex: 1;
-}
 .promo {
   display: flex;
   width: 70%;
